--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -7,3 +7,20 @@
     font-size: 40px;
     margin-bottom: 0px;
 }
+
+.navbar {
+    background-color: #eeeeee;
+}
+
+.jumbotron {
+    background-color: #eeeeee;
+}
+
+.white-divide {
+    width: 100%;
+    height: 126px;
+    background-image: url(../img/white-divide.png);
+    background-position: top center;
+    background-size: 100% 126px;
+    margin-top: -126px;
+}
