--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -25,16 +25,31 @@
     margin-top: -126px;
 }
 
-#footer {
+.gray-divide-2 {
+    width: 100%;
+    height: 126px;
+    background-image: url(../img/gray-divide-2.png);
+    background-position: top center;
+    background-size: 100% 126px;
+    margin-top: -126px;
+}
+
+#footer-information {
+    width: 100%;
+    padding: 60px 0px 100px 0px;
+    background: #444957;
+    color: #aaaaaa;
+    font-size: 17px;
+    line-height: 27px;
+}
+
+#copyright p {
     width: 100%;
     padding: 30px 0px 30px 0px;
     background-color: #2c3039;
     text-align: center;
     font-size: 13px;
     letter-spacing: 1px;
-}
-
-#copyright p {
     color: #ffffff;
     margin: 0px;
 }
