--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -193,6 +193,12 @@ ol {
     margin-bottom: 35px;
 }
 
+#picture-of-me img {
+    margin-top: 20px;
+    width: 70%;
+    height: 70%;
+}
+
 .navbar-brand {
     font-size: 40px;
     margin-bottom: 0px;
