--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -94,20 +94,20 @@ ol {
     text-transform: uppercase;
     padding: 14px 25px 12px;
     color: #ffffff;
-    background: #00c0ca;
+    background: #04c2c9;
     letter-spacing: 2px;
 }
 
 .primary-btn.border-btn {
     background: transparent;
-    border: 2px solid #00c0ca;
+    border: 2px solid #04c2c9;
     color: #111111;
 }
 
 .site-btn {
     font-size: 15px;
     color: #ffffff;
-    background: #00c0ca;
+    background: #04c2c9;
     font-weight: 700;
     letter-spacing: 2px;
     border: none;
@@ -283,7 +283,7 @@ ol {
     50% {
         -webkit-transform: rotate(180deg);
         transform: rotate(180deg);
-        border: 4px solid #00c0ca;
+        border: 4px solid #04c2c9;
         border-left-color: transparent;
     }
     100% {
@@ -302,7 +302,7 @@ ol {
     }
     50% {
         -webkit-transform: rotate(180deg);
-        border: 4px solid #00c0ca;
+        border: 4px solid #04c2c9;
         border-left-color: transparent;
     }
     100% {
@@ -370,7 +370,7 @@ ol {
 }
 
 .highlight {
-    color: #e31b6d;
+    color: #ff3f8e;
 }
 
 #pt {
