--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -156,7 +156,6 @@ ol {
 -----------------------*/
 
 .about {
-    margin-top: 250px;
     padding-top: 0;
 }
 
@@ -415,7 +414,7 @@ ol {
     text-align: center;
 }
 
-#home,
+#shooting-star,
 #pt {
     height: 100%;
     width: 100%;
