--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -159,6 +159,11 @@ ol {
     padding-top: 0;
 }
 
+.about h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .about.about--page {
     padding-top: 80px;
     padding-bottom: 80px;
@@ -181,7 +186,7 @@ ol {
 }
 
 .about--text {
-    padding-top: 110px;
+    padding-top: 70px;
 }
 
 .about--text p {
@@ -402,7 +407,15 @@ ol {
     height: 20px;
     margin-top: 18px;
     margin-bottom: 10px;
-    text-align: center;
+}
+
+.header-divide-black-center {
+    width: 100px;
+    border-top: 3px solid #444957;
+    height: 20px;
+    margin: 0 auto;
+    margin-top: 18px;
+    margin-bottom: 10px;
 }
 
 .header-divide-white {
@@ -411,7 +424,6 @@ ol {
     height: 20px;
     margin-top: 18px;
     margin-bottom: 10px;
-    text-align: center;
 }
 
 #shooting-star,
