--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -472,3 +472,93 @@ ol {
     height: 100%;
     width: 100%;
 }
+
+
+/*---------------------
+  Skills
+-----------------------*/
+
+.skill__bar__item {
+    margin-bottom: 20px;
+}
+
+.skill__bar__item p {
+    font-size: 15px;
+    font-weight: 500;
+    color: #04c2c9;
+    margin-bottom: 10px;
+}
+
+.skill__bar__item .barfiller {
+    width: 100%;
+    height: 5px;
+    background: rgba(255, 255, 255, 0.2);
+    border: none;
+    margin-bottom: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.skill__bar__item .barfiller .tip {
+    margin-top: -32px;
+    padding: 0;
+    font-size: 15px;
+    color: #04c2c9;
+    background: transparent;
+}
+
+.skill__bar__item .barfiller .tip:after {
+    display: none;
+}
+
+
+/*---------------------
+  Bars
+-----------------------*/
+
+.barfiller {
+    width: 100%;
+    height: 12px;
+    background: #fcfcfc;
+    border: 1px solid #ccc;
+    position: relative;
+    margin-bottom: 20px;
+    box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+}
+
+.barfiller .fill {
+    display: block;
+    position: relative;
+    width: 0px;
+    height: 100%;
+    background: #333;
+    z-index: 1;
+}
+
+.barfiller .tipWrap {
+    display: none;
+}
+
+.barfiller .tip {
+    margin-top: -30px;
+    padding: 2px 4px;
+    font-size: 11px;
+    color: #04c2c9;
+    left: 0px;
+    position: absolute;
+    z-index: 2;
+    background: #333;
+}
+
+.barfiller .tip:after {
+    border: solid;
+    border-color: rgba(0, 0, 0, 0.8) transparent;
+    border-width: 6px 6px 0 6px;
+    content: '';
+    display: block;
+    position: absolute;
+    left: 9px;
+    top: 100%;
+    z-index: 9;
+}
