--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -479,7 +479,7 @@ ol {
 -----------------------*/
 
 .skill__bar__item {
-    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .skill__bar__item p {
