--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -99,23 +99,28 @@ ol {
     transition: all 0.5s;
 }
 
-.button-color-black {
+.button-color-turquoise {
     background: transparent;
-    border: 2px solid #444957;
-    color: #444957;
+    border: 2px solid #04c2c9;
+    color: #04c2c9;
     font-size: 12pt;
     margin: 5px 0 0 0;
     outline: 0;
     padding: 10px 30px;
     transition: all 0.5s;
+    border-radius: 3px 15px 3px 15px;
 }
 
-.button-color-black:focus,
-.button-color-black:hover,
 .button-color-white:focus,
 .button-color-white:hover {
     background-color: #04c2c9;
     border-color: #04c2c9;
+}
+
+.button-color-turquoise:focus,
+.button-color-turquoise:hover {
+    background-color: #04c2c9;
+    color: #fff;
 }
 
 .primary-btn {
@@ -242,6 +247,21 @@ ol {
     color: #fff;
 }
 
+
+/*---------------------
+  Portfolio
+-----------------------*/
+
+#portfolio {
+    background-color: #f5f5f5;
+}
+
+.portfolio h1 {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
 .navbar-brand {
     font-size: 40px;
     margin-bottom: 0px;
@@ -259,6 +279,15 @@ ol {
     width: 100%;
     height: 126px;
     background-image: url(../img/white-divide.png);
+    background-position: top center;
+    background-size: 100% 126px;
+    margin-top: -126px;
+}
+
+.white-divide-2 {
+    width: 100%;
+    height: 126px;
+    background-image: url(../img/white-divide-2.png);
     background-position: top center;
     background-size: 100% 126px;
     margin-top: -126px;
@@ -492,7 +521,8 @@ ol {
 .skill__bar__item p {
     font-size: 15px;
     font-weight: 500;
-    color: #04c2c9;
+    font-style: italic;
+    color: #444957;
     margin-bottom: 10px;
 }
 
