--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -302,6 +302,10 @@ ol {
     margin-top: -126px;
 }
 
+#footer {
+    margin-top: 200px;
+}
+
 #footer-information {
     width: 100%;
     padding: 60px 0px 100px 0px;
