--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -520,6 +520,34 @@ ol {
     width: 100%;
 }
 
+#welcome {
+    padding: 100px;
+    width: 100px;
+}
+
+#shooting-star .button {
+    border: 2px solid #04c2c9;
+    box-sizing: inherit;
+    cursor: pointer;
+    display: inline-block;
+    background: transparent;
+    border: 2px solid #04c2c9;
+    color: #04c2c9;
+    font-size: 12pt;
+    margin: 5px 0 0 0;
+    outline: 0;
+    padding: 10px 30px;
+    transition: all 0.5s;
+    border-radius: 3px 15px 3px 15px;
+}
+
+#shooting-star .button:focus,
+#shooting-star .button:hover {
+    border: 2px solid #04c2c9;
+    background-color: #04c2c9;
+    color: #fff;
+}
+
 
 /*---------------------
   Skills
