--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -14,6 +14,13 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+.flex {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 h1,
 h2,
 h3,
