--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -3,22 +3,22 @@
 -----------------------*/
 
 * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 html,
 body {
-    height: 100%;
-    font-family: 'Now Regular';
-    -webkit-font-smoothing: antialiased;
+  height: 100%;
+  font-family: "Now Regular";
+  -webkit-font-smoothing: antialiased;
 }
 
 .flex {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1,
@@ -27,444 +27,445 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
-    color: #111111;
-    font-weight: 400;
-    font-family: 'Rajdhani', sans-serif;
+  margin: 0;
+  color: #111111;
+  font-weight: 400;
+  font-family: "Rajdhani", sans-serif;
 }
 
 h1 {
-    font-size: 70px;
+  font-size: 70px;
 }
 
 h2 {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 h3 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 h4 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 h5 {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 h6 {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 p {
-    font-size: 15px;
-    font-family: 'Now Regular';
-    color: #444444;
-    font-weight: 400;
-    line-height: 26px;
-    margin: 0 0 15px 0;
+  font-size: 15px;
+  font-family: "Now Regular";
+  color: #444444;
+  font-weight: 400;
+  line-height: 26px;
+  margin: 0 0 15px 0;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 input:focus,
 select:focus,
 button:focus,
 textarea:focus {
-    outline: none;
+  outline: none;
 }
 
 a:hover,
 a:focus {
-    text-decoration: none;
-    outline: none;
-    color: #e31b6d;
+  text-decoration: none;
+  outline: none;
+  color: #e31b6d;
 }
 
 ul,
 ol {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
-
 
 /*---------------------
   Button
 -----------------------*/
 
 .button-color-white {
-    background: transparent;
-    border: 2px solid #fff;
-    color: #fff;
-    font-size: 12pt;
-    margin: 5px 0 0 0;
-    outline: 0;
-    padding: 10px 30px;
-    transition: all 0.5s;
+  background: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  font-size: 12pt;
+  margin: 5px 0 0 0;
+  outline: 0;
+  padding: 10px 30px;
+  transition: all 0.5s;
 }
 
 .button-color-turquoise {
-    background: transparent;
-    border: 2px solid #04c2c9;
-    color: #04c2c9;
-    font-size: 12pt;
-    margin: 5px 0 0 0;
-    outline: 0;
-    padding: 10px 30px;
-    transition: all 0.5s;
-    border-radius: 3px 15px 3px 15px;
+  background: transparent;
+  border: 2px solid #04c2c9;
+  color: #04c2c9;
+  width: 200px;
+  text-align: center;
+  font-size: 12pt;
+  margin: 5px 0 0 0;
+  outline: 0;
+  padding: 10px 30px;
+  transition: all 0.5s;
+  border-radius: 3px 15px 3px 15px;
 }
 
 .button-color-white:focus,
 .button-color-white:hover {
-    background-color: #04c2c9;
-    border-color: #04c2c9;
+  background-color: #04c2c9;
+  border-color: #04c2c9;
 }
 
 .button-color-turquoise:focus,
 .button-color-turquoise:hover {
-    border: 2px solid #04c2c9;
-    background-color: #04c2c9;
-    color: #fff;
+  border: 2px solid #04c2c9;
+  background-color: #04c2c9;
+  color: #fff;
 }
 
 .primary-btn {
-    display: inline-block;
-    font-size: 15px;
-    text-transform: uppercase;
-    padding: 14px 25px 12px;
-    color: #ffffff;
-    background: #04c2c9;
-    letter-spacing: 2px;
+  display: inline-block;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding: 14px 25px 12px;
+  color: #ffffff;
+  background: #04c2c9;
+  letter-spacing: 2px;
 }
 
 .primary-btn.border-btn {
-    background: transparent;
-    border: 2px solid #04c2c9;
-    color: #111111;
+  background: transparent;
+  border: 2px solid #04c2c9;
+  color: #111111;
 }
 
 .site-btn {
-    font-size: 15px;
-    color: #ffffff;
-    background: #04c2c9;
-    font-weight: 700;
-    letter-spacing: 2px;
-    border: none;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 14px 30px;
-    width: 100%;
+  font-size: 15px;
+  color: #ffffff;
+  background: #04c2c9;
+  font-weight: 700;
+  letter-spacing: 2px;
+  border: none;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 14px 30px;
+  width: 100%;
 }
-
 
 /*---------------------
   Section
 -----------------------*/
 
 .section-title {
-    margin-bottom: 40px;
-    position: relative;
-    z-index: 1;
+  margin-bottom: 40px;
+  position: relative;
+  z-index: 1;
 }
 
 .section-title.center-title {
-    text-align: center;
+  text-align: center;
 }
 
 .section-title h2 {
-    font-size: 42px;
-    color: #111111;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-size: 42px;
+  color: #111111;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .section-title h1 {
-    font-size: 100px;
-    color: #f2f2f2;
-    font-family: 'Rockville Solid Regular';
-    position: absolute;
-    left: 0;
-    top: -45px;
-    width: 100%;
-    z-index: -1;
+  font-size: 100px;
+  color: #f2f2f2;
+  font-family: "Rockville Solid Regular";
+  position: absolute;
+  left: 0;
+  top: -45px;
+  width: 100%;
+  z-index: -1;
 }
-
 
 /*---------------------
   About
 -----------------------*/
 
 .about {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 .about h1 {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .about.about--page {
-    padding-top: 80px;
-    padding-bottom: 80px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .about.about--page .section-title {
-    margin-bottom: 28px;
+  margin-bottom: 28px;
 }
 
 .about.about--page .section-title h2 {
-    line-height: 55px;
+  line-height: 55px;
 }
 
 .about.about--page .about--text {
-    padding-top: 15px;
+  padding-top: 15px;
 }
 
 .about.about--page .about--text p {
-    color: #111111;
+  color: #111111;
 }
 
 .about--text {
-    padding-top: 70px;
+  padding-top: 70px;
 }
 
 .about--text p {
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
 
 #picture-of-me img {
-    text-align: center;
-    margin-top: 20px;
-    margin-left: 70px;
-    width: 70%;
-    height: 70%;
+  text-align: center;
+  margin-top: 20px;
+  margin-left: 70px;
+  width: 70%;
+  height: 70%;
 }
 
 #picture-of-me .my-position {
-    text-align: center;
-    font-size: 20px;
-    margin-top: 25px;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 25px;
 }
 
 #contact-me:focus,
 #contact-me:hover {
-    color: #fff;
+  color: #fff;
 }
-
 
 /*---------------------
   Portfolio
 -----------------------*/
 
 #portfolio {
-    background-color: #f5f5f5;
-    padding-bottom: 200px;
+  background-color: #f5f5f5;
+  padding-bottom: 200px;
 }
 
 .portfolio h1 {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.nav-link {
+  border: unset;
+  background-color: #eeeeee;
 }
 
 .navbar-brand {
-    font-size: 40px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+  font-size: 40px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .navbar {
-    background-color: #eeeeee;
+  background-color: #eeeeee;
 }
 
 .jumbotron {
-    background-color: #eeeeee;
+  background-color: #eeeeee;
 }
 
 .white-divide {
-    width: 100%;
-    height: 126px;
-    background-image: url(../img/white-divide.png);
-    background-position: top center;
-    background-size: 100% 126px;
-    margin-top: -126px;
+  width: 100%;
+  height: 126px;
+  background-image: url(../img/white-divide.png);
+  background-position: top center;
+  background-size: 100% 126px;
+  margin-top: -126px;
 }
 
 .white-divide-2 {
-    width: 100%;
-    height: 126px;
-    background-image: url(../img/white-divide-2.png);
-    background-position: top center;
-    background-size: 100% 126px;
-    margin-top: -126px;
+  width: 100%;
+  height: 126px;
+  background-image: url(../img/white-divide-2.png);
+  background-position: top center;
+  background-size: 100% 126px;
+  margin-top: -126px;
 }
 
 .gray-divide-2 {
-    width: 100%;
-    height: 126px;
-    background-image: url(../img/gray-divide-2.png);
-    background-position: top center;
-    background-size: 100% 126px;
-    margin-top: -126px;
+  width: 100%;
+  height: 126px;
+  background-image: url(../img/gray-divide-2.png);
+  background-position: top center;
+  background-size: 100% 126px;
+  margin-top: -126px;
 }
 
-#footer-information {
-    width: 100%;
-    padding: 60px 0px 100px 0px;
-    background: #444957;
-    color: #aaaaaa;
-    font-size: 17px;
-    line-height: 27px;
+#contact-information {
+  width: 100%;
+  padding: 60px 0px 100px 0px;
+  background: #444957;
+  color: #aaaaaa;
+  font-size: 17px;
+  line-height: 27px;
 }
 
-#footer-information h6 {
-    margin-top: 20px;
-    font-size: 25px;
-    color: #04c2c9;
+#contact-information h6 {
+  margin-top: 20px;
+  font-size: 25px;
+  color: #04c2c9;
 }
 
-#footer-information .fab {
-    color: #ffffff;
-    font-size: 40px;
-    padding-right: 10px;
+#contact-information .fab {
+  color: #ffffff;
+  font-size: 40px;
+  padding-right: 10px;
 }
 
-#footer-information .far,
-#footer-information .fas {
-    color: #ffffff;
-    font-size: 40px;
+#contact-information .far,
+#contact-information .fas {
+  color: #ffffff;
+  font-size: 40px;
 }
 
 .contact-info {
-    color: #ffffff;
-    margin-top: -3px;
-    padding: 0px;
+  color: #ffffff;
+  margin-top: -3px;
+  padding: 0px;
 }
 
 #copyright p {
-    width: 100%;
-    padding: 30px 0px 30px 0px;
-    background-color: #2c3039;
-    text-align: center;
-    font-size: 13px;
-    letter-spacing: 1px;
-    color: #ffffff;
-    margin: 0px;
+  width: 100%;
+  padding: 30px 0px 30px 0px;
+  background-color: #2c3039;
+  text-align: center;
+  font-size: 13px;
+  letter-spacing: 1px;
+  color: #ffffff;
+  margin: 0px;
 }
-
 
 /*---------------------
   Preloader
 -----------------------*/
 
 #preloder {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 999999;
-    background: #000;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 999999;
+  background: #000;
 }
 
 .loader {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -13px;
-    margin-left: -13px;
-    border-radius: 60px;
-    animation: loader 0.8s linear infinite;
-    -webkit-animation: loader 0.8s linear infinite;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -13px;
+  margin-left: -13px;
+  border-radius: 60px;
+  animation: loader 0.8s linear infinite;
+  -webkit-animation: loader 0.8s linear infinite;
 }
 
 @keyframes loader {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-        border: 4px solid #eeeeee;
-        border-left-color: transparent;
-    }
-    50% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-        border: 4px solid #04c2c9;
-        border-left-color: transparent;
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-        border: 4px solid #aaaaaa;
-        border-left-color: transparent;
-    }
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    border: 4px solid #eeeeee;
+    border-left-color: transparent;
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+    border: 4px solid #04c2c9;
+    border-left-color: transparent;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    border: 4px solid #aaaaaa;
+    border-left-color: transparent;
+  }
 }
 
 @-webkit-keyframes loader {
-    0% {
-        -webkit-transform: rotate(0deg);
-        border: 4px solid #eeeeee;
-        border-left-color: transparent;
-    }
-    50% {
-        -webkit-transform: rotate(180deg);
-        border: 4px solid #04c2c9;
-        border-left-color: transparent;
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        border: 4px solid #aaaaaa;
-        border-left-color: transparent;
-    }
+  0% {
+    -webkit-transform: rotate(0deg);
+    border: 4px solid #eeeeee;
+    border-left-color: transparent;
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+    border: 4px solid #04c2c9;
+    border-left-color: transparent;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    border: 4px solid #aaaaaa;
+    border-left-color: transparent;
+  }
 }
-
 
 /*---------------------
   Helper CSS
 -----------------------*/
 
 .section-title {
-    margin-bottom: 40px;
-    position: relative;
-    z-index: 1;
+  margin-bottom: 40px;
+  position: relative;
+  z-index: 1;
 }
 
 .section-title.center-title {
-    text-align: center;
+  text-align: center;
 }
 
 .section-title h2 {
-    font-size: 42px;
-    color: #111111;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-size: 42px;
+  color: #111111;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .section-title h1 {
-    font-size: 100px;
-    color: #f2f2f2;
-    font-family: 'Rockville Solid';
-    position: absolute;
-    left: 0;
-    top: -45px;
-    width: 100%;
-    z-index: -1;
+  font-size: 100px;
+  color: #f2f2f2;
+  font-family: "Rockville Solid";
+  position: absolute;
+  left: 0;
+  top: -45px;
+  width: 100%;
+  z-index: -1;
 }
 
 .set-bg {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
 }
 
 .me {
-    padding-top: 100px;
-    padding-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .text-white h1,
@@ -477,171 +478,169 @@ ol {
 .text-white span,
 .text-white li,
 .text-white a {
-    color: #fff;
+  color: #fff;
 }
 
 .highlight {
-    color: #e31b6d;
+  color: #e31b6d;
 }
 
 .highlight-turquoise {
-    color: #04c2c9;
+  color: #04c2c9;
 }
 
 .header-divide-black {
-    width: 50px;
-    border-top: 3px solid #444957;
-    height: 20px;
-    margin-top: 18px;
-    margin-bottom: 10px;
+  width: 50px;
+  border-top: 3px solid #444957;
+  height: 20px;
+  margin-top: 18px;
+  margin-bottom: 10px;
 }
 
 .header-divide-black-center {
-    width: 100px;
-    border-top: 3px solid #444957;
-    height: 20px;
-    margin: 0 auto;
-    margin-top: 18px;
-    margin-bottom: 10px;
+  width: 100px;
+  border-top: 3px solid #444957;
+  height: 20px;
+  margin: 0 auto;
+  margin-top: 18px;
+  margin-bottom: 10px;
 }
 
 .header-divide-white {
-    width: 50px;
-    border-top: 3px solid #ffffff;
-    height: 20px;
-    margin-top: 18px;
-    margin-bottom: 10px;
+  width: 50px;
+  border-top: 3px solid #ffffff;
+  height: 20px;
+  margin-top: 18px;
+  margin-bottom: 10px;
 }
 
 #shooting-star,
 #pt {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .canvas {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 #welcome {
-    padding: 100px;
-    width: 100px;
+  padding: 100px;
+  width: 100px;
 }
 
 #shooting-star .button {
-    border: 2px solid #04c2c9;
-    box-sizing: inherit;
-    cursor: pointer;
-    display: inline-block;
-    background: transparent;
-    border: 2px solid #04c2c9;
-    color: #04c2c9;
-    font-size: 20pt;
-    margin: 5px 0 0 0;
-    outline: 0;
-    padding: 10px 30px;
-    transition: all 0.5s;
-    border-radius: 3px 15px 3px 15px;
+  border: 2px solid #04c2c9;
+  box-sizing: inherit;
+  cursor: pointer;
+  display: inline-block;
+  background: transparent;
+  border: 2px solid #04c2c9;
+  color: #04c2c9;
+  font-size: 20pt;
+  margin: 5px 0 0 0;
+  outline: 0;
+  padding: 10px 30px;
+  transition: all 0.5s;
+  border-radius: 3px 15px 3px 15px;
 }
 
 #shooting-star .button:focus,
 #shooting-star .button:hover {
-    border: 2px solid #04c2c9;
-    background-color: #04c2c9;
-    color: #fff;
+  border: 2px solid #04c2c9;
+  background-color: #04c2c9;
+  color: #fff;
 }
-
 
 /*---------------------
   Skills
 -----------------------*/
 
 .skill__bar__item {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .skill__bar__item p {
-    font-size: 15px;
-    font-weight: 500;
-    font-style: italic;
-    color: #444957;
-    margin-bottom: 10px;
+  font-size: 15px;
+  font-weight: 500;
+  font-style: italic;
+  color: #444957;
+  margin-bottom: 10px;
 }
 
 .skill__bar__item .barfiller {
-    width: 100%;
-    height: 5px;
-    background: rgba(255, 255, 255, 0.2);
-    border: none;
-    margin-bottom: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  width: 100%;
+  height: 5px;
+  background: rgba(255, 255, 255, 0.2);
+  border: none;
+  margin-bottom: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .skill__bar__item .barfiller .tip {
-    margin-top: -32px;
-    padding: 0;
-    font-size: 15px;
-    color: #04c2c9;
-    background: transparent;
+  margin-top: -32px;
+  padding: 0;
+  font-size: 15px;
+  color: #04c2c9;
+  background: transparent;
 }
 
 .skill__bar__item .barfiller .tip:after {
-    display: none;
+  display: none;
 }
-
 
 /*---------------------
   Bars
 -----------------------*/
 
 .barfiller {
-    width: 100%;
-    height: 12px;
-    background: #fcfcfc;
-    border: 1px solid #ccc;
-    position: relative;
-    margin-bottom: 20px;
-    box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 12px;
+  background: #fcfcfc;
+  border: 1px solid #ccc;
+  position: relative;
+  margin-bottom: 20px;
+  box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
 }
 
 .barfiller .fill {
-    display: block;
-    position: relative;
-    width: 0px;
-    height: 100%;
-    background: #333;
-    z-index: 1;
+  display: block;
+  position: relative;
+  width: 0px;
+  height: 100%;
+  background: #333;
+  z-index: 1;
 }
 
 .barfiller .tipWrap {
-    display: none;
+  display: none;
 }
 
 .barfiller .tip {
-    margin-top: -30px;
-    padding: 2px 4px;
-    font-size: 11px;
-    color: #04c2c9;
-    left: 0px;
-    position: absolute;
-    z-index: 2;
-    background: #333;
+  margin-top: -30px;
+  padding: 2px 4px;
+  font-size: 11px;
+  color: #04c2c9;
+  left: 0px;
+  position: absolute;
+  z-index: 2;
+  background: #333;
 }
 
 .barfiller .tip:after {
-    border: solid;
-    border-color: rgba(0, 0, 0, 0.8) transparent;
-    border-width: 6px 6px 0 6px;
-    content: '';
-    display: block;
-    position: absolute;
-    left: 9px;
-    top: 100%;
-    z-index: 9;
+  border: solid;
+  border-color: rgba(0, 0, 0, 0.8) transparent;
+  border-width: 6px 6px 0 6px;
+  content: "";
+  display: block;
+  position: absolute;
+  left: 9px;
+  top: 100%;
+  z-index: 9;
 }
