--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -90,6 +90,10 @@ ol {
   margin: 0;
 }
 
+/*---------------------
+  Key Frames
+-----------------------*/
+
 @keyframes popDown {
   0% {
     transform: translateY(-100px);
