--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -288,6 +288,10 @@ ol {
   Navigation
 -----------------------*/
 
+nav {
+  background: #eeeeee;
+}
+
 .nav-link {
   cursor: pointer;
   border: unset;
