--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -1117,7 +1117,7 @@ aside:hover ul li:nth-child(3) {
 }
 
 .mind-card-wrapper .card:hover .face.face1 {
-    background: #ff0057;
+    background: #04c2c9;
     transform: translateY(0);
 }
 
