--- a/src/org/thinkit/githubpages/css/navigation.css
+++ b/src/org/thinkit/githubpages/css/navigation.css
@@ -1,41 +1,13 @@
-/*
-  Copyright 2020 Kato Shinya.
-
-  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
-  in compliance with the License. You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software distributed under the License
-  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
-  or implied. See the License for the specific language governing permissions and limitations under
-  the License.
-*/
-
-.nav-link {
-  font-size: 20px;
-  cursor: pointer;
-  border: unset;
-  background-color: #eeeeee;
-  margin-right: 20px;
-  padding-top: 20px;
-}
-
-.nav-link:focus,
-.nav-link:hover {
-  border: unset;
-  background-color: #eeeeee;
-}
-
-.navbar-brand {
-  font-size: 40px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.navbar {
-  background-color: #eeeeee;
-  transition: height 0.3s ease-out;
+nav {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  background: #1b242f;
+  border-bottom: 3px solid #04c2c9;
+  height: 50px;
+  text-align: left;
+  width: 100%;
+  z-index: 99;
 }
 
 nav.fixed {
@@ -43,12 +15,44 @@ nav.fixed {
   left: 0;
   position: fixed;
   top: 0;
-  width: 100%;
-  z-index: 10;
-  animation: popDown 1.3s;
 }
 
-.navbar-toggler {
-  margin: 0 0 0 auto;
-  transform: translate(0, 0);
+nav.fixed.desk {
+  animation: popDown 0.5s;
+}
+
+nav .link-wrap {
+  background: #333;
+  height: 0;
+  max-width: 1200px;
+  overflow: hidden;
+  position: absolute;
+  top: 53px;
+  transition: height 0.3s ease-out;
+  width: 100%;
+}
+
+nav .link-wrap.visible {
+  height: 220px;
+}
+
+nav .link-wrap div {
+  color: #fff;
+  cursor: pointer;
+  font-size: 12pt;
+  padding: 12px 20px;
+  text-transform: uppercase;
+  transition: color 0.5s;
+}
+
+nav .link-wrap div:first-child {
+  padding: 25px 20px 12px 20px;
+}
+
+nav .link-wrap div:hover {
+  color: #e31b6d;
+}
+
+nav .active {
+  color: #e31b6d;
 }
