--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -101,6 +101,12 @@ ol {
   margin: 0;
 }
 
+@media screen and (min-width: 600px) {
+  body {
+    font-size: 12pt;
+  }
+}
+
 /*---------------------
   Button
 -----------------------*/
