--- a/src/org/thinkit/githubpages/css/navigation.css
+++ b/src/org/thinkit/githubpages/css/navigation.css
@@ -1,3 +1,17 @@
+/*
+  Copyright 2020 Kato Shinya.
+
+  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+  in compliance with the License. You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software distributed under the License
+  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+  or implied. See the License for the specific language governing permissions and limitations under
+  the License.
+*/
+
 nav {
   bottom: 0;
   left: 0;
@@ -19,14 +33,15 @@ nav.fixed {
 }
 
 nav .link-wrap {
-  background: #333;
-  height: 0;
   max-width: 1200px;
   overflow: hidden;
-  position: absolute;
   top: 53px;
   transition: height 0.5s ease-out;
   width: 100%;
+  background: none;
+  height: initial;
+  overflow: visible;
+  position: initial;
 }
 
 nav .link-wrap.visible {
@@ -64,13 +79,13 @@ nav div.active {
   color: #e31b6d;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 480px) {
   nav .link-wrap {
     background: none;
-    height: initial;
-    overflow: visible;
-    position: initial;
-    text-align: center;
+  }
+  nav .link-wrap div {
+    font-size: 8pt;
+    padding: 10px 17px;
   }
 }
 
