--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -538,6 +538,29 @@ ol {
   color: #fff;
 }
 
+#mind-list .fas,
+#mind-list .far {
+  color: #04c2c9;
+  font-size: 80px;
+}
+
+.mind {
+  width: 200px;
+}
+
+.mind-title {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.mind-description {
+  text-align: left;
+}
+
+#mind-list {
+  text-align: center;
+}
+
 @media screen and (max-width: 480px) {
   #shooting-star .button {
     font-size: 12pt;
