--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -11,7 +11,7 @@ html,
 body {
   height: 100%;
   color: #fff;
-  font-family: "Now Regular";
+  font-family: 'Now Regular';
   font-size: 8pt;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -41,7 +41,7 @@ h6 {
   margin: 0;
   color: #111111;
   font-weight: 400;
-  font-family: "Rajdhani", sans-serif;
+  font-family: 'Rajdhani', sans-serif;
 }
 
 h1 {
@@ -70,7 +70,7 @@ h6 {
 
 p {
   font-size: 15px;
-  font-family: "Now Regular";
+  font-family: 'Now Regular';
   color: #444444;
   font-weight: 400;
   line-height: 26px;
@@ -203,7 +203,7 @@ ol {
 .section-title h1 {
   font-size: 100px;
   color: #f2f2f2;
-  font-family: "Rockville Solid Regular";
+  font-family: 'Rockville Solid Regular';
   position: absolute;
   left: 0;
   top: -45px;
@@ -392,7 +392,7 @@ ol {
 
 .hexagon:before {
   background-color: inherit;
-  content: "";
+  content: '';
   height: inherit;
   position: absolute;
   right: calc((100% / 2) - ((100% * 0.57735) / 2));
@@ -403,7 +403,7 @@ ol {
 
 .hexagon:after {
   background-color: inherit;
-  content: "";
+  content: '';
   height: inherit;
   position: absolute;
   right: calc((100% / 2) - ((100% * 0.57735) / 2));
@@ -436,7 +436,7 @@ ol {
 .section-title h1 {
   font-size: 100px;
   color: #f2f2f2;
-  font-family: "Rockville Solid";
+  font-family: 'Rockville Solid';
   position: absolute;
   left: 0;
   top: -45px;
