--- a/src/org/thinkit/githubpages/css/portfolio.css
+++ b/src/org/thinkit/githubpages/css/portfolio.css
@@ -15,16 +15,19 @@
 section:nth-of-type(3) {
   background: #f5f5f5;
 }
+
 section:nth-of-type(3) .container {
   padding: 0;
 }
+
 section:nth-of-type(3) .filter-wrap {
   position: relative;
   white-space: nowrap;
 }
 section:nth-of-type(3) .filter {
+  color: #1b242f;
   cursor: pointer;
-  font-size: 6pt;
+  font-size: 10pt;
   font-weight: 600;
   padding: 0 20px;
   transition: background-color 0.5s;
@@ -91,6 +94,9 @@ section:nth-of-type(3) #gallery .mix {
 }
 section:nth-of-type(3) #gallery .mix .waypoint {
   background: #fff;
+}
+section:nth-of-type(3) #gallery .card {
+  border: unset;
 }
 section:nth-of-type(3) #gallery .mix .button:hover {
   background: #e31b6d;
