--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -28,11 +28,11 @@ body {
   justify-content: center;
 }
 
-.flex.row {
+.flex.flex-row {
   flex-direction: row;
 }
 
-.flex.wrap {
+.flex.flex-wrap {
   flex-wrap: wrap;
 }
 
@@ -49,7 +49,7 @@ h6 {
 }
 
 h1 {
-  font-size: 70px;
+  font-size: 60px;
 }
 
 h2 {
