--- a/src/org/thinkit/githubpages/css/portfolio.css
+++ b/src/org/thinkit/githubpages/css/portfolio.css
@@ -95,6 +95,9 @@ section:nth-of-type(3) #gallery .mix {
   display: none;
   position: relative;
 }
+section:nth-of-type(3) #gallery .card {
+  border-radius: 10%;
+}
 section:nth-of-type(3) #gallery .mix .waypoint {
   background: #fff;
 }
